--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<li>Vargrant</li>
 		<li>Docker</li>
 		<li>Ansible</li>
-		<li>Integração Contínua</li>
+		<li>Nioh 2</li>
 	</ul>
 </body>
 </html>
