--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<ul>
 		<li>Vargrant</li>
-		<li>Docker: Criando containers sem dor de cabeça</li>
+		<li>Curso de Docker: Criando containers sem dor de cabeça</li>
 		<li>Ansible</li>
 		<li>Nioh 2</li>
 		<li>Kubernetes</li>
