--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 	<ul>
-		<li>Vargrant: Gerenciando máquinas virtuais</li>
+		<li>Vagrant: Gerenciando máquinas virtuais</li>
 		<li>Docker: Criando containers sem dor de cabeça</li>
-		<li>Vargrant</li>
 		<li>Ansible</li>
 		<li>Nioh 2</li>
 		<li>Kubernetes</li>
