--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<li>Docker: Criando containers sem dor de cabeça</li>
 		<li>Ansible</li>
 		<li>Nioh 2</li>
-		<li>Kubernetes</li>
+		<li>Kubernetes: Introdução a orquestração de containers</li>
 	</ul>
 </body>
 </html>
